src/objects/Rejected_Partner_Duplicate_Lead__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Duplicate Field contains /001 then this will fill in the account ID</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rejected Partner Duplicate Leads</relationshipLabel>
        <relationshipName>Rejected_Partner_Duplicate_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Payload_Received__c</fullName>
        <label>Lead Submitted</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Rejected Partner Duplicate Leads</relationshipLabel>
        <relationshipName>Rejected_Partner_Duplicate_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matched_Duplicates__c</fullName>
        <label>Matched Duplicates</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Resolution_Comments__c</fullName>
        <label>Resolution Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    <label>Rejected Partner Duplicate Lead</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Lead__c</columns>
        <columns>Lead_Payload_Received__c</columns>
        <columns>Matched_Duplicates__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RPDL-{000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rejected Partner Duplicate Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>